fix text resize on safari

--- a/src/resources/style/typo.styl
+++ b/src/resources/style/typo.styl
@@ -22,6 +22,7 @@ html
   font-size: $font-size__body
   line-height: $line-height__body
   color: $text-color__primary
+  text-size-adjust: 100%
 
   *
     font-family: inherit
